--- a/01_intro_python_basis.ipynb
+++ b/01_intro_python_basis.ipynb
@@ -350,6 +350,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "humansize.approximate_size.__base__()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -469,7 +478,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    from lxml import etree£\n",
+    "    from lxml import etree\n",
     "except ImportError:\n",
     "    import xml.etree.ElementTree as etree"
    ]
@@ -596,6 +605,13 @@
    "source": [
     "!python humansize.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
