--- a/02_02_les_type_de_donnees_natifs.ipynb
+++ b/02_02_les_type_de_donnees_natifs.ipynb
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "# les entiers peuvent être arbitraiement grand\n",
-    "type(1000000000000000) "
+    "type(1000000000000000)"
    ]
   },
   {
@@ -401,7 +401,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "math.tan(math.pi/4)"
+    "math.tan(math.pi/4)\n",
+    "\n",
+    "math."
    ]
   },
   {
@@ -505,8 +507,7 @@
    "outputs": [],
    "source": [
     "a_list = ['a', 'b', 'mpilgrim', 'z', 'example']  # Définition, ordre conservé\n",
-    "a_list \n",
-    "['a', 'b', 'mpilgrim', 'z', 'example']"
+    "a_list"
    ]
   },
   {
@@ -542,7 +543,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a_list[-3] "
+    "a_list[-3] \n",
+    "a_list[10]"
    ]
   },
   {
@@ -569,7 +571,7 @@
    "outputs": [],
    "source": [
     "a_list = ['a', 'b', 'mpilgrim', 'z', 'example']\n",
-    "a_list[1:3] "
+    "a_list[1:3]"
    ]
   },
   {
@@ -1816,6 +1818,13 @@
    "source": [
     "bool(None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
