--- a/02_04_fichiers.ipynb
+++ b/02_04_fichiers.ipynb
@@ -73,7 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# essayez os.stat('nom dde fichier')"
+    "# essayez os.stat('nom dde fichier')\n",
+    "os.stat('02_04_fichiers.ipynb')"
    ]
   },
   {
@@ -519,6 +520,13 @@
     "with open('test.log', encoding='utf-8') as a_file: \n",
     "    print(a_file.read())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
