--- a/03_comprehensions.ipynb
+++ b/03_comprehensions.ipynb
@@ -154,7 +154,10 @@
    "outputs": [],
    "source": [
     "# Exercice: utilisez la fonction humansize pour transformer\n",
-    "# la taille de fichier dans la comprehension de liste"
+    "# la taille de fichier dans la comprehension de liste\n",
+    "import humansize\n",
+    "\n",
+    "[(humansize.approximate_size(os.stat(f).st_size), os.path.realpath(f)) for f in glob.glob('*.ipynb')]"
    ]
   },
   {
@@ -188,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_dict = {f:os.stat(f) for f in glob.glob('*.ipynb')}"
+    "metadata_dict = {f:os.stat(f) for f in glob.glob('*.ipynb')}\n"
    ]
   },
   {
@@ -347,6 +350,13 @@
    "source": [
     "{2**x for x in range(10)} # N’importe quelle séquence en entrée (pas uniquement un set)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
