--- a/02_01_controle_de_flux.ipynb
+++ b/02_01_controle_de_flux.ipynb
@@ -82,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = ['cat', 'window', 'defenestrate']  \n",
-    "for w in words:  \n",
+    "\n",
+    "for w in ['cat', 'window', 'defenestrate']:  \n",
     "    print(w, len(w))"
    ]
   },
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for w in words[:]:  \n",
+    "for w in words[:]:\n",
     "    if len(w) > 6:  \n",
     "        words.insert(0, w) \n",
     "words"
@@ -286,6 +286,23 @@
     "    pass   # todo \n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
