--- a/02_03_strings.ipynb
+++ b/02_03_strings.ipynb
@@ -210,6 +210,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.modules['humansize']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
