--- a/00_Introduction_to_Jupyter.ipynb
+++ b/00_Introduction_to_Jupyter.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Here, I introduce basic notions of Jupyter and Python. I assume that you have some knowledge of programming (in MATLAB for example).\n",
-    "You will need to have [anaconda](https://www.continuum.io/downloads) for python 3 installed for the following.\n",
+    "You will need to have [anaconda](https://www.anaconda.com/download) for python 3 installed for the following.\n",
     "\n",
     "# Jupyter/IPython Notebook Quick Start Guide\n",
     "\n",
