--- a/00_Introduction_to_Jupyter.ipynb
+++ b/00_Introduction_to_Jupyter.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "# Jupyter/IPython Notebook Quick Start Guide\n",
     "\n",
-    "The following is partially taken from the [offical documentation](https://jupyter-notebook-beginner-guide.readthedocs.io/en/latest/index.html):\n",
+    "The following is partially taken from the [offical documentation](https://jupyter.readthedocs.io/en/latest/content-quickstart.html):\n",
     "\n",
     "## 1. What is the Jupyter Notebook?\n",
     "Notebook documents (or “notebooks”, all lower case) are documents produced by the Jupyter Notebook App, which contain both *computer code* (e.g. python) and *rich text elements* (paragraph, equations, figures, links, etc...). Notebook documents are both human-readable documents containing the analysis description and the results (figures, tables, etc..) as well as executable documents which can be run to perform data analysis."
